--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,7 @@ importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.files,assert_all_are_dirs)
 importFrom(assertive.files,assert_all_are_existing_files)
 importFrom(assertive.numbers,assert_all_are_in_range)
-importFrom(assertive.numbers,assert_all_are_positive)
+importFrom(assertive.numbers,assert_all_are_non_negative)
 importFrom(assertive.properties,assert_has_no_duplicates)
 importFrom(assertive.properties,assert_is_atomic)
 importFrom(assertive.properties,assert_is_non_empty)
@@ -80,7 +80,7 @@ importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertAllAreValidNames)
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
-importFrom(basejump,assertIsAnImplicitInteger)
+importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,basejump_geom_abline)
 importFrom(basejump,basejump_geom_label)
 importFrom(basejump,basejump_geom_label_average)
