Export `runDate()` utility function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(readSampleMetadataFile)
 export(readTx2gene)
 export(readYAMLSampleData)
 export(readYAMLSampleMetrics)
+export(runDate)
 export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
