Update NAMESPACE and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(readLogFile)
 export(readProgramVersions)
 export(readSampleData)
 export(readSampleMetadataFile)
+export(readTx2Gene)
 export(readTx2gene)
 export(readYAMLSampleData)
 export(readYAMLSampleMetrics)
@@ -49,7 +50,7 @@ export(selectSamples)
 export(separatorBar)
 export(uniteInterestingGroups)
 export(updateMessage)
-importClassesFrom(basejump,tx2gene)
+importClassesFrom(basejump,Tx2Gene)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,na.omit)
