--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(convertGenesToSymbols)
 export(copyToDropbox)
 export(gene2symbol)
 export(getBarcodeCutoffFromCommandsLog)
+export(getGTFFileFromYAML)
 export(getLevelFromCommandsLog)
 export(getUMITypeFromCommandsLog)
 export(interestingGroups)
