Draft update consolidating scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,12 @@ export(checkInterestingGroups)
 export(convertGenesToSymbols)
 export(copyToDropbox)
 export(gene2symbol)
-export(getBarcodeCutoffFromCommandsLog)
+export(getBarcodeCutoffFromCommands)
 export(getGTFFileFromYAML)
-export(getLevelFromCommandsLog)
-export(getUMITypeFromCommandsLog)
+export(getLevelFromCommands)
+export(getMetricsFromYAML)
+export(getSampleDataFromYAML)
+export(getUMITypeFromCommands)
 export(interestingGroups)
 export(lanePattern)
 export(metadataBlacklist)
