--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,6 @@ export(selectSamples)
 export(separatorBar)
 export(uniteInterestingGroups)
 export(updateMessage)
-importClassesFrom(basejump,Tx2Gene)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,na.omit)
@@ -109,6 +108,7 @@ importFrom(basejump,sanitizeNA)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,selectSamples)
 importFrom(basejump,separatorBar)
+importFrom(basejump,tx2gene)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,updateMessage)
 importFrom(dplyr,arrange)
