Switch to using `realpath()` and scale to match console width automatically

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(basejump,makeSummarizedExperiment)
 importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
+importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
