--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
+importFrom(basejump,Tx2Gene)
 importFrom(basejump,assertAllAreValidNames)
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
@@ -109,7 +110,6 @@ importFrom(basejump,sanitizeNA)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,selectSamples)
 importFrom(basejump,separatorBar)
-importFrom(basejump,tx2gene)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,updateMessage)
 importFrom(dplyr,arrange)
