Improve `readTx2Gene()` to slot genome metadata information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(separatorBar)
 export(uniteInterestingGroups)
 export(updateMessage)
 importFrom(Biostrings,reverseComplement)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,tail)
