--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,71 +1,8 @@
 Package: bcbioBase
-Title: bcbio Base Functions
-Description: Base functions for bcbio R packages.
-Version: 0.99.0
-Date: 2018-10-20
-Authors@R: c(
-    person(
-        given = "Michael",
-        family = "Steinbaugh",
-        email ="mike@steinbaugh.com",
-        role = c("aut", "cre"),
-        comment = c(ORCID = "0000-0002-2403-2221")
-    ),
-    person(
-        given = "Rory",
-        family = "Kirchner",
-        email = "roryk@alum.mit.edu",
-        role = "aut",
-        comment = c(ORCID = "0000-0003-4814-5885")
-    ),
-    person(
-        given = "Lorena",
-        family = "Pantano",
-        email = "lorena.pantano@gmail.com",
-        role = "aut",
-        comment = c(ORCID = "0000-0002-3859-3249")
-    ),
-    person(
-        given = "Harvard Chan Bioinformatics Core",
-        email = "bioinformatics@hsph.harvard.edu",
-        role = c("cph", "fnd")
-    ))
-URL:
-    http://bioinformatics.sph.harvard.edu/bcbioBase,
-    https://github.com/hbc/bcbioBase
-BugReports: https://github.com/hbc/bcbioBase/issues
-License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: TRUE
+Title: TRAVIS BIOCONDUCTOR CACHE
+Description: TRAVIS BIOCONDUCTOR CACHE
+Version: 0.0.0.9000
 Depends:
     R (>= 3.5)
 Imports:
-    Biostrings,
-    S4Vectors,
-    assertive.base,
-    assertive.files,
-    assertive.numbers,
-    assertive.properties,
-    assertive.sets,
-    assertive.strings,
-    assertive.types,
-    basejump (>= 0.99.0),
-    dplyr (>= 0.7),
-    magrittr (>= 1.5),
-    methods,
-    plyr (>= 1.8),
-    rdrop2 (>= 0.8),
-    readr (>= 1.1),
-    rlang (>= 0.2),
-    stringr (>= 1.3),
-    tibble (>= 1.4),
-    tidyr (>= 0.8),
-    utils
-Suggests:
-    roxygen2,
-    testthat (>= 2.0)
-Remotes:
-    steinbaugh/basejump@bioconductor
-biocViews: Infrastructure
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.0
+    SingleCellExperiment
