--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,31 @@
 # Travis-CI configuration for Bioconductor packages
 # https://docs.travis-ci.com/user/languages/r
 
-language: r
+language: R
+sudo: false
+dist: trusty
 cache: packages
-
-r:
-  - bioc-release
-  - bioc-devel
-
-os:
-  - linux
-  - osx
-
-matrix:
-  exclude:
-  - os: osx
-    r: bioc-devel
-
-# blocklist
-# branches:
-#   except:
-#   - develop
-
-# safelist
-# branches:
-#   only:
-#   - master
-
-env:
-  global:
-    - LINTR_COMMENT_BOT=true
-
-# r_build_args: "--no-build-vignettes"
-# r_check_args: "--no-vignettes"
-
-# Set true before submission to Bioconductor.
-# Ignoring built with R 3.5.1 warnings.
-# Ignoring BiocInstaller deprecation warning.
-warnings_are_errors: false
+latex: false
 
 # Temporarily enable when caching Bioconductor packages.
 # script: true
+
+jobs:
+  include:
+  - r: bioc-release
+  - r: bioc-devel
+    warnings_are_errors: false
+  - os: osx
+    fortran: false
+
+matrix:
+  fast_finish: true
+
+env:
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=false
+    - LINTR_COMMENT_BOT=true
+    - R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
 
 r_packages:
   - covr
