--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
-# DO NOT CHANGE the "init" and "install" sections below
+# AppVeyor-CI configuration for Bioconductor packages
+# https://github.com/krlmlr/r-appveyor
 
-# Download script file from GitHub
+# Download script file from GitHub.
 init:
   ps: |
         $ErrorActionPreference = "Stop"
@@ -10,17 +11,16 @@ init:
 install:
   ps: Bootstrap
 
-cache:
-  # - C:\RLibrary
+platform: x64
 
-# Adapt as necessary starting from here
+# Cache size limit is currently too small for R packages.
+# cache:
+#   - C:\RLibrary
 
 environment:
   global:
-    BIOC_USE_DEVEL: true
     R_ARCH: x64
     USE_RTOOLS: true
-    # WARNINGS_ARE_ERRORS: 1
 
 build_script:
   - travis-tool.sh install_bioc_deps
