--- a/.travis.yml
+++ b/.travis.yml
@@ -3,44 +3,33 @@
 
 language: r
 cache: packages
+sudo: false
+bioc_required: true
 
-r:
-  - bioc-release
-  - bioc-devel
-
-os:
-  - linux
-  - osx
+# Temporarily enable when caching package library.
+# script: true
 
 matrix:
-  exclude:
+  include:
+  - os: linux
+    r: bioc-release
+    warnings_are_errors: true
+  - os: linux
+    r: bioc-devel
+    latex: false
+    warnings_are_errors: false
   - os: osx
     r: bioc-devel
-
-# blocklist
-# branches:
-#   except:
-#   - develop
-
-# safelist
-# branches:
-#   only:
-#   - master
+    fortran: false
+    latex: false
+    warnings_are_errors: false
+  fast_finish: true
 
 env:
   global:
+    - _R_CHECK_FORCE_SUGGESTS_=false
     - LINTR_COMMENT_BOT=true
-
-# r_build_args: "--no-build-vignettes"
-# r_check_args: "--no-vignettes"
-
-# Set true before submission to Bioconductor.
-# Ignoring built with R 3.5.1 warnings.
-# Ignoring BiocInstaller deprecation warning.
-warnings_are_errors: false
-
-# Temporarily enable when caching Bioconductor packages.
-# script: true
+    - R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
 
 r_packages:
   - covr
