Recache Travis [skip appveyor]

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 bioc_required: true
 
 # Temporarily enable when caching package library.
-# script: true
+script: true
 
 matrix:
   include:
