--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.99.0
-Date: 2018-10-27
+Date: 2018-10-29
 Authors@R: c(
     person(
         given = "Michael",
@@ -49,6 +49,7 @@ Imports:
     assertive.sets,
     assertive.strings,
     assertive.types,
+    assertthat,
     basejump (>= 0.99),
     dplyr (>= 0.7),
     magrittr (>= 1.5),
