--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.99.1
-Date: 2018-11-02
+Version: 0.5.0
+Date: 2018-11-04
 Authors@R: c(
     person(
         given = "Michael",
@@ -50,14 +50,14 @@ Imports:
     assertive.strings,
     assertive.types,
     assertthat,
-    basejump.assertions (>= 0.99.1),
-    basejump.classes (>= 0.99.1),
-    basejump.coercion (>= 0.99.1),
-    basejump.developer (>= 0.99.1),
-    basejump.experiment (>= 0.99.1),
-    basejump.io (>= 0.99.1),
-    basejump.plots (>= 0.99.1),
-    basejump.sanitization (>= 0.99.1),
+    basejump.assertions (>= 0.8),
+    basejump.classes (>= 0.8),
+    basejump.coercion (>= 0.8),
+    basejump.developer (>= 0.8),
+    basejump.experiment (>= 0.8),
+    basejump.io (>= 0.8),
+    basejump.plots (>= 0.8),
+    basejump.sanitization (>= 0.8),
     dplyr (>= 0.7),
     magrittr (>= 1.5),
     methods,
@@ -70,7 +70,7 @@ Imports:
     tidyr (>= 0.8),
     utils
 Suggests:
-    basejump.globals,
+    basejump.globals (>= 0.8),
     rio,
     roxygen2,
     testthat (>= 2.0)
@@ -86,4 +86,4 @@ Remotes:
     steinbaugh/basejump.sanitization
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.0.9000
