--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,23 +54,23 @@ importFrom(assertive.types,assert_is_list)
 importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertthat,assert_that)
-importFrom(basejump.assertions,assertAllAreValidNames)
-importFrom(basejump.assertions,assertHasRownames)
-importFrom(basejump.assertions,assertIsImplicitInteger)
-importFrom(basejump.classes,Tx2Gene)
-importFrom(basejump.developer,printString)
-importFrom(basejump.experiment,minimalSampleData)
-importFrom(basejump.io,import)
-importFrom(basejump.io,localOrRemoteFile)
-importFrom(basejump.io,realpath)
-importFrom(basejump.plots,basejump_geom_abline)
-importFrom(basejump.plots,basejump_geom_label)
-importFrom(basejump.plots,basejump_geom_label_average)
-importFrom(basejump.plots,basejump_geom_label_repel)
-importFrom(basejump.sanitization,camel)
-importFrom(basejump.sanitization,makeNames)
-importFrom(basejump.sanitization,removeNA)
-importFrom(basejump.sanitization,sanitizeNA)
+importFrom(basejump,Tx2Gene)
+importFrom(basejump,assertAllAreValidNames)
+importFrom(basejump,assertHasRownames)
+importFrom(basejump,assertIsImplicitInteger)
+importFrom(basejump,basejump_geom_abline)
+importFrom(basejump,basejump_geom_label)
+importFrom(basejump,basejump_geom_label_average)
+importFrom(basejump,basejump_geom_label_repel)
+importFrom(basejump,camel)
+importFrom(basejump,import)
+importFrom(basejump,localOrRemoteFile)
+importFrom(basejump,makeNames)
+importFrom(basejump,minimalSampleData)
+importFrom(basejump,printString)
+importFrom(basejump,realpath)
+importFrom(basejump,removeNA)
+importFrom(basejump,sanitizeNA)
 importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
 importFrom(dplyr,funs)
@@ -112,4 +112,4 @@ importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
 importMethodsFrom(S4Vectors,coerce)
-importMethodsFrom(basejump.coercion,coerce)
+importMethodsFrom(basejump,coerce)
