--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,7 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertthat,assert_that)
 importFrom(basejump,Tx2Gene)
-importFrom(basejump,assertAllAreValidNames)
+importFrom(basejump,assertAreValidNames)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,basejump_geom_abline)
