--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,9 +55,6 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertthat,assert_that)
 importFrom(basejump,Tx2Gene)
-importFrom(basejump,assertAreValidNames)
-importFrom(basejump,assertHasRownames)
-importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,basejump_geom_abline)
 importFrom(basejump,basejump_geom_label)
 importFrom(basejump,basejump_geom_label_average)
@@ -82,6 +79,9 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(goalie,assertAreValidNames)
+importFrom(goalie,assertHasRownames)
+importFrom(goalie,assertIsImplicitInteger)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_colnames)
 importFrom(methods,as)
