--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.5.0
-Date: 2018-11-06
+Version: 0.5.1
+Date: 2018-11-11
 Authors@R: c(
     person(
         given = "Michael",
@@ -52,6 +52,7 @@ Imports:
     assertthat,
     basejump (>= 0.8),
     dplyr (>= 0.7),
+    goalie (>= 0.1),
     magrittr (>= 1.5),
     methods,
     plyr (>= 1.8),
@@ -66,7 +67,8 @@ Suggests:
     roxygen2,
     testthat (>= 2.0)
 Remotes:
-    steinbaugh/basejump@develop
+    steinbaugh/basejump@develop,
+    steinbaugh/goalie@develop
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
