Update timestamp and update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(basejump,interestingGroups)
 importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
+importFrom(basejump,makeSampleData)
 importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
