Simplify import of sample data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(getMetricsFromYAML)
 export(getSampleDataFromYAML)
 export(getUMITypeFromCommands)
 export(glimpse)
+export(import)
 export(interestingGroups)
 export(lanePattern)
 export(metadataBlacklist)
