--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.5.5
-Date: 2018-11-29
+Version: 0.5.6
+Date: 2018-12-08
 Authors@R: c(
     person(
         given = "Michael",
@@ -49,9 +49,9 @@ Imports:
     assertive.strings,
     assertive.types,
     assertthat,
-    basejump (>= 0.8.5),
+    basejump (>= 0.8.9),
     dplyr (>= 0.7),
-    goalie (>= 0.1.2),
+    goalie (>= 0.2),
     magrittr (>= 1.5),
     methods,
     plyr (>= 1.8),
@@ -67,7 +67,7 @@ Suggests:
     testthat (>= 2.0)
 Remotes:
     steinbaugh/basejump@develop,
-    steinbaugh/goalie
+    steinbaugh/goalie@develop
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
