--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(goalie,assert)
 importFrom(goalie,hasRownames)
+importFrom(goalie,isCharacter)
 importFrom(goalie,isInt)
 importFrom(goalie,validNames)
 importFrom(magrittr,"%>%")
@@ -111,7 +112,6 @@ importFrom(readr,read_csv)
 importFrom(readr,read_lines)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
-importFrom(rlang,has_length)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stringr,str_match)
