Update assert checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,7 +91,10 @@ importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(goalie,assert)
 importFrom(goalie,hasRownames)
+importFrom(goalie,isADirectory)
+importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
+importFrom(goalie,isFile)
 importFrom(goalie,isInt)
 importFrom(goalie,validNames)
 importFrom(magrittr,"%>%")
