--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,8 @@ importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(goalie,allAreAtomic)
+importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isADirectory)
@@ -96,6 +98,9 @@ importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isInt)
+importFrom(goalie,isNonEmpty)
+importFrom(goalie,isScalar)
+importFrom(goalie,isSubset)
 importFrom(goalie,validNames)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_colnames)
