Update assert checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,14 +69,17 @@ importFrom(dplyr,ungroup)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
+importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isADirectory)
 importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isInt)
+importFrom(goalie,isMatchingRegex)
 importFrom(goalie,isNonEmpty)
 importFrom(goalie,isScalar)
+importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validNames)
 importFrom(magrittr,"%>%")
