--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,12 +69,14 @@ importFrom(dplyr,ungroup)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
+importFrom(goalie,containsAURL)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isADirectory)
 importFrom(goalie,isAFile)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
+importFrom(goalie,isInRange)
 importFrom(goalie,isInt)
 importFrom(goalie,isMatchingRegex)
 importFrom(goalie,isNonEmpty)
