Improve handling of `integer()` input into `readSampleData(lanes)`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(goalie,isInRange)
 importFrom(goalie,isInt)
 importFrom(goalie,isMatchingRegex)
 importFrom(goalie,isNonEmpty)
+importFrom(goalie,isNonNegative)
 importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
