--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.5.7
-Date: 2018-12-21
+Date: 2019-01-06
 Authors@R: c(
     person(
         given = "Michael",
@@ -39,13 +39,13 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.5)
 Imports:
-    Biostrings,
-    S4Vectors,
-    basejump (>= 0.9.1),
+    Biostrings (>= 2.48),
+    S4Transformer (>= 0.1),
+    S4Vectors (>= 0.18),
+    basejump (>= 0.9.2),
     dplyr (>= 0.7),
-    goalie (>= 0.2.1),
+    goalie (>= 0.2.3),
     magrittr (>= 1.5),
-    methods,
     plyr (>= 1.8),
     rdrop2 (>= 0.8),
     readr (>= 1.1),
@@ -53,13 +53,15 @@ Imports:
     stringr (>= 1.3),
     tibble (>= 1.4),
     tidyr (>= 0.8),
+    methods,
     utils
 Suggests:
     roxygen2,
     testthat (>= 2.0)
 Remotes:
+    steinbaugh/S4Transformer
     steinbaugh/basejump@develop,
-    steinbaugh/goalie@develop
+    steinbaugh/goalie
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
