Import S4 coercion methods from S4Transformer instead of basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,5 +115,5 @@ importFrom(tibble,glimpse)
 importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
+importMethodsFrom(S4Transformer,coerce)
 importMethodsFrom(S4Vectors,coerce)
-importMethodsFrom(basejump,coerce)
