--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,10 @@ matrix:
     r: bioc-release
     fortran: false
     latex: false
-    warnings_are_errors: false
+    warnings_are_errors: true
   - os: linux
     r: bioc-release
     warnings_are_errors: true
-  - os: linux
-    r: bioc-devel
-    latex: false
-    warnings_are_errors: false
   fast_finish: true
 
 env:
