--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Suggests:
     roxygen2,
     testthat (>= 2.0)
 Remotes:
-    hbc/basejump@v0.7.2
+    steinbaugh/basejump@v0.7.2
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
