--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,27 +37,15 @@ BugReports: https://github.com/hbc/bcbioBase/issues/
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
-Depends: R (>= 3.5)
+Depends: R (>= 3.4)
 Imports:
-    Biostrings (>= 2.48),
-    S4Transformer (>= 0.1),
-    S4Vectors (>= 0.18),
-    basejump (>= 0.9.2),
-    dplyr (>= 0.7),
-    goalie (>= 0.2.4),
-    magrittr (>= 1.5),
-    plyr (>= 1.8),
-    rdrop2 (>= 0.8),
-    readr (>= 1.1),
-    rlang (>= 0.3),
-    stringr (>= 1.3),
-    tibble (>= 1.4),
-    tidyr (>= 0.8),
-    methods,
-    utils
-Suggests:
-    roxygen2,
-    testthat (>= 2.0)
+    S4Transformer (>= 0.1), basejump (>= 0.9.3), goalie (>= 0.2.4),
+    Biostrings (>= 2.48), , S4Vectors (>= 0.18),
+    dplyr (>= 0.7), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
+        readr (>= 1.1), rlang (>= 0.3), stringr (>= 1.3), tibble (>= 1.4),
+        tidyr (>= 0.8),
+    methods, utils
+Suggests: roxygen2, testthat (>= 2.0)
 Remotes:
     steinbaugh/S4Transformer,
     steinbaugh/basejump,
