--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ LazyData: TRUE
 Depends: R (>= 3.4)
 Imports:
     S4Transformer (>= 0.1), basejump (>= 0.9.3), goalie (>= 0.2.4),
-    Biostrings (>= 2.48), , S4Vectors (>= 0.18),
+    Biostrings (>= 2.48), S4Vectors (>= 0.18),
     dplyr (>= 0.7), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
         readr (>= 1.1), rlang (>= 0.3), stringr (>= 1.3), tibble (>= 1.4),
         tidyr (>= 0.8),
