--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,15 @@
 # Travis-CI configuration for Bioconductor packages
 # https://docs.travis-ci.com/user/languages/r
 
-# Temporarily enable when caching package library.
-# script: true
-
 language: r
 cache: packages
-sudo: false
-bioc_required: true
 
 matrix:
   include:
-  - os: osx
-    r: bioc-release
-    fortran: false
-    latex: false
-    warnings_are_errors: true
   - os: linux
     r: bioc-release
-    warnings_are_errors: true
-  fast_finish: true
+  - os: osx
+    r: bioc-release
 
 env:
   global:
@@ -31,7 +21,7 @@ bioc_packages:
   - BiocCheck
   - GenomeInfoDbData
 r_github_packages:
-  - jimhester/lintr
+  - mjsteinbaugh/lintr
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
