--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.4)
 Imports:
-    S4Transformer (>= 0.1), basejump (>= 0.9.3), goalie (>= 0.2.4),
+    basejump (>= 0.9.4), goalie (>= 0.2.4),
     Biostrings, S4Vectors,
     dplyr (>= 0.7), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
         readr (>= 1.1), rlang (>= 0.3), stringr (>= 1.3), tibble (>= 1.4),
@@ -47,7 +47,6 @@ Imports:
     methods, utils
 Suggests: roxygen2, testthat (>= 2.0)
 Remotes:
-    steinbaugh/S4Transformer,
     steinbaugh/basejump,
     steinbaugh/goalie
 biocViews: Infrastructure
