--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,5 +116,5 @@ importFrom(tibble,glimpse)
 importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
-importMethodsFrom(S4Transformer,coerce)
 importMethodsFrom(S4Vectors,coerce)
+importMethodsFrom(basejump,coerce)
