--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,8 @@ Imports:
         readr (>= 1.1), rlang (>= 0.3), stringr (>= 1.3), tibble (>= 1.4),
         tidyr (>= 0.8),
     methods, utils
-Suggests: roxygen2, testthat (>= 2.0)
+Suggests:
+    roxygen2, testthat
 Remotes:
     steinbaugh/basejump,
     steinbaugh/goalie
