--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,3 +53,9 @@ artifacts:
 
   - path: '\*_*.zip'
     name: Bits
+
+notifications:
+  - provider: Email
+    to:
+      - mike@steinbaugh.com
+    on_build_status_changed: true
