--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends:
     R (>= 3.4),
-    basejump (>= 0.7.2)
+    basejump (>= 0.9.10)
 Imports:
     assertive.base,
     assertive.files,
@@ -48,27 +48,27 @@ Imports:
     assertive.strings,
     assertive.types,
     Biostrings,
-    dplyr (>= 0.7),
-    ggplot2 (>= 3.0),
+    dplyr (>= 0.8),
+    ggplot2 (>= 3.1),
     ggrepel (>= 0.7),
     grid,
     magrittr (>= 1.5),
     methods,
     plyr (>= 1.8),
     rdrop2 (>= 0.8),
-    readr (>= 1.1),
-    rlang (>= 0.2),
+    readr (>= 1.3),
+    rlang (>= 0.3),
     S4Vectors,
     stats,
-    stringr (>= 1.3),
-    tibble (>= 1.4),
+    stringr (>= 1.4),
+    tibble (>= 2.0),
     tidyr (>= 0.8),
     utils
 Suggests:
     roxygen2,
     testthat (>= 2.0)
 Remotes:
-    steinbaugh/basejump@v0.7.2
+    steinbaugh/basejump
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
