--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,10 @@ importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsTx2gene)
+importFrom(basejump,basejump_geom_abline)
+importFrom(basejump,basejump_geom_label)
+importFrom(basejump,basejump_geom_label_average)
+importFrom(basejump,basejump_geom_label_repel)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,fixNA)
