--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,30 +41,13 @@ Depends:
     R (>= 3.4),
     basejump (>= 0.9.10)
 Imports:
-    assertive.base,
-    assertive.files,
-    assertive.numbers,
-    assertive.properties,
-    assertive.sets,
-    assertive.strings,
-    assertive.types,
-    Biostrings,
-    dplyr (>= 0.8),
-    ggplot2 (>= 3.1),
-    ggrepel (>= 0.7),
-    grid,
-    magrittr (>= 1.5),
-    methods,
-    plyr (>= 1.8),
-    rdrop2 (>= 0.8),
-    readr (>= 1.3),
-    rlang (>= 0.3),
-    S4Vectors,
-    stats,
-    stringr (>= 1.4),
-    tibble (>= 2.0),
-    tidyr (>= 0.8),
-    utils
+    Biostrings, S4Vectors,
+    assertive.base, assertive.files, assertive.numbers, assertive.properties,
+        assertive.sets, assertive.strings, assertive.types,
+    dplyr (>= 0.8), ggplot2 (>= 3.1), ggrepel (>= 0.7), magrittr (>= 1.5),
+        plyr (>= 1.8), rdrop2 (>= 0.8), readr (>= 1.3), rlang (>= 0.3),
+        stringr (>= 1.4), tibble (>= 2.0), tidyr (>= 0.8),
+    grid, methods, stats, utils
 Suggests:
     roxygen2,
     testthat (>= 2.0)
