Reexport `lanePattern` and `minimalSampleData` from basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,8 +93,10 @@ importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
+importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
