--- a/.travis.yml
+++ b/.travis.yml
@@ -4,41 +4,20 @@
 language: r
 cache: packages
 
-r:
-  - bioc-release
-  # - bioc-devel
-
-os:
-  - linux
-  # - osx
-
 matrix:
-  exclude:
+  include:
+  - os: linux
+    r: bioc-release
   - os: osx
-    r: bioc-devel
+    r: bioc-release
 
-# blocklist
-# branches:
-#   except:
-#   - develop
-
-# safelist
-# branches:
-#   only:
-#   - master
+branches:
+  only:
+  - master
 
 env:
   global:
     - LINTR_COMMENT_BOT=true
-
-# r_build_args: "--no-build-vignettes"
-# r_check_args: "--no-vignettes"
-
-# Set true before submission to Bioconductor
-warnings_are_errors: true
-
-# Temporarily enable when caching Bioconductor packages
-# script: true
 
 r_packages:
   - covr
@@ -46,7 +25,7 @@ bioc_packages:
   - BiocCheck
   - GenomeInfoDbData
 r_github_packages:
-  - jimhester/lintr
+  - steinbaugh/lintr
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
