Update AppVeyor config [skip travis]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,13 +21,15 @@ branches:
 
 environment:
   global:
-    PKGTYPE: win.binary
+    _R_CHECK_FORCE_SUGGESTS_: false
     R_ARCH: x64
     USE_RTOOLS: true
+  matrix:
+    - R_VERSION: devel
+      GCC_PATH: mingw_64
 
 build_script:
   - travis-tool.sh install_bioc_deps
-  - travis-tool.sh install_deps
 
 test_script:
   - travis-tool.sh run_tests
