--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,16 @@ cache: packages
 
 matrix:
   include:
-  - os: linux
-    r: bioc-release
-  - os: osx
-    r: bioc-release
+    - os: linux
+      r: bioc-release
+    - os: linux
+      r: bioc-devel
+    - os: osx
+      r: bioc-release
+  allow_failures:
+    - os: osx
+    - r: bioc-devel
+  fast_finish: true
 
 branches:
   only:
