--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ matrix:
   include:
     - os: linux
       r: bioc-release
+    - os: linux
+      r: bioc-devel
     - os: osx
       r: bioc-release
+  allow_failures:
+    - os: osx
+    - r: bioc-devel
+  fast_finish: true
 
 branches:
   only:
