--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio base functions
 Description: Base functions for bcbio R packages.
-Version: 0.5.13
-Date: 2019-03-18
+Version: 0.5.14
+Date: 2019-03-22
 Authors@R: c(
     person(
         given = "Michael",
@@ -39,17 +39,17 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.4)
 Imports:
-    basejump (>= 0.9.13), goalie (>= 0.2.11),
+    basejump (>= 0.9.15), goalie (>= 0.2.12),
     Biostrings, S4Vectors,
     dplyr (>= 0.8), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
-        readr (>= 1.3), rlang (>= 0.3), stringr (>= 1.4), tibble (>= 2.0),
+        readr (>= 1.3), rlang (>= 0.3), stringr (>= 1.4), tibble (>= 2.1),
         tidyr (>= 0.8),
     methods, utils
 Suggests:
     roxygen2, testthat
 Remotes:
-    steinbaugh/basejump,
-    steinbaugh/goalie
+    acidgenomics/basejump,
+    acidgenomics/goalie
 biocViews:
     DataImport,
     Infrastructure
