--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ bioc_packages:
   - BiocCheck
   - GenomeInfoDbData
 r_github_packages:
-  - steinbaugh/lintr
+  - acidgenomics/lintr
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
