--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,57 +1,8 @@
 Package: bcbioBase
-Title: bcbio base functions
-Description: Base functions for bcbio R packages.
-Version: 0.6.0
-Date: 2019-03-28
-Authors@R: c(
-    person(
-        given = "Michael",
-        family = "Steinbaugh",
-        email ="mike@steinbaugh.com",
-        role = c("aut", "cre"),
-        comment = c(ORCID = "0000-0002-2403-2221")
-    ),
-    person(
-        given = "Rory",
-        family = "Kirchner",
-        email = "roryk@alum.mit.edu",
-        role = "aut",
-        comment = c(ORCID = "0000-0003-4814-5885")
-    ),
-    person(
-        given = "Lorena",
-        family = "Pantano",
-        email = "lorena.pantano@gmail.com",
-        role = "aut",
-        comment = c(ORCID = "0000-0002-3859-3249")
-    ),
-    person(
-        given = "Harvard Chan Bioinformatics Core",
-        email = "bioinformatics@hsph.harvard.edu",
-        role = c("cph", "fnd")
-    ))
-URL:
-    https://bioinformatics.sph.harvard.edu/bcbioBase/,
-    https://github.com/hbc/bcbioBase/
-BugReports: https://github.com/hbc/bcbioBase/issues/
-License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: TRUE
-Depends: R (>= 3.4)
+Title: TRAVIS BIOCONDUCTOR CACHE
+Description: TRAVIS BIOCONDUCTOR CACHE
+Version: 0.0.0.9000
+Depends:
+    R (>= 3.5)
 Imports:
-    basejump (>= 0.10.0), goalie (>= 0.2.12),
-    Biostrings, S4Vectors,
-    dplyr (>= 0.8), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
-        readr (>= 1.3), rlang (>= 0.3), stringr (>= 1.4), tibble (>= 2.1),
-        tidyr (>= 0.8),
-    methods, utils
-Suggests:
-    roxygen2, testthat
-Remotes:
-    acidgenomics/basejump,
-    acidgenomics/goalie
-biocViews:
-    DataImport,
-    Infrastructure
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+    SummarizedExperiment
