--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,14 @@
-language: r
-cache: packages
+language: general
 
-script: true
+services:
+  - docker
 
-matrix:
-  include:
-    - os: linux
-      r: bioc-release
-    - os: linux
-      r: bioc-devel
-    - os: osx
-      r: bioc-release
-  allow_failures:
-    - os: osx
-    - r: bioc-devel
-  fast_finish: true
+before_install:
+  - docker pull acidgenomics/rnaseq
+  - docker images
 
-branches:
-  only:
-    - master
-
-env:
-  global:
-    - LINTR_COMMENT_BOT=true
-
-r_packages:
-  - covr
-bioc_packages:
-  - BiocCheck
-  - GenomeInfoDbData
-r_github_packages:
-  - acidgenomics/lintr
-
-after_success:
-  - R CMD BiocCheck .
-  - test $TRAVIS_OS_NAME = 'linux' && $TRAVIS_R_VERSION_STRING = 'bioc-release' && Rscript -e 'lintr::lint_package()'
-  - test $TRAVIS_OS_NAME = 'linux' && $TRAVIS_R_VERSION_STRING = 'bioc-release' && Rscript -e 'covr::codecov()'
+script:
+  - docker run -ti --user="bioc" --volume="${PWD}:/bcbioBase" --workdir="/bcbioBase" acidgenomics/rnaseq Rscript -e 'source("travis-docker.R")'
 
 notifications:
   email:
