--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,28 @@ branches:
   only:
     - master
 
-before_install:
-  - docker pull acidgenomics/rnaseq
-  - docker images
+before_script:
+  - chmod +x travis-docker.sh
 
-script:
-  - docker run -ti --user="bioc" --volume="${PWD}:/bcbioBase" --workdir="/bcbioBase" acidgenomics/rnaseq Rscript -e 'source("travis-docker.R")'
+jobs:
+  include:
+    - stage: test
+      name: "Docker: Bioconductor 3.9"
+      script: tag="bioc-3.9" ./travis-docker.sh
+    - stage: test
+      name: "Docker: Bioconductor 3.8"
+      script: tag="bioc-3.8" ./travis-docker.sh
+    - stage: test
+      name: "Docker: Bioconductor 3.7"
+      script: tag="bioc-3.7" ./travis-docker.sh
+
+matrix:
+  fast_finish: true
+
+after_failure:
+  - env | sort
+  - df -h
+  - docker images
 
 notifications:
   email:
