--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,15 +1,8 @@
-^.*\.Rproj$
 ^CONTRIBUTING\.md$
-^\.Rprofile$
-^\.Rproj\.user$
-^\.git$
-^\.httr-oauth$
-^\.lintr$
-^\.travis\.yml$
-^_pkgdown\.yml$
-^appveyor\.yml$
+^Meta$
+^[-._a-zA-Z0-9]+\.(R|html|pdf|png|sh|txt|yaml|yml)$
+^[._][-._a-zA-Z0-9]+$
 ^data-raw$
-^docs$
+^doc(s)?$
 ^pkgdown$
-^travis-docker\.R$
-^travis-docker\.sh$
+^vignettes/\.$
