--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions and generics for bcbio R packages.
-Version: 0.4.1
+Version: 0.4.2
+Date: 2019-05-12
 Authors@R: c(
     person(
         given = "Michael",
@@ -38,7 +39,7 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends:
     R (>= 3.5),
-    basejump (== 0.7.2)
+    basejump (>= 0.7.2)
 Imports:
     assertive.base,
     assertive.files,
@@ -68,7 +69,7 @@ Suggests:
     roxygen2,
     testthat (>= 2.0)
 Remotes:
-    acidgenomics/basejump@v0.7.2
+    acidgenomics/basejump
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
