--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,35 +1,36 @@
-# DO NOT CHANGE the "init" and "install" sections below
-
-# Download script file from GitHub
 init:
   ps: |
         $ErrorActionPreference = "Stop"
-        Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
+        Invoke-WebRequest http://raw.github.com/acidgenomics/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
 
 install:
   ps: Bootstrap
 
-cache:
-  # - C:\RLibrary
+platform: x64
 
-# Adapt as necessary starting from here
+branches:
+  only:
+    - master
 
 environment:
   global:
-    BIOC_USE_DEVEL: TRUE
+    _R_CHECK_FORCE_SUGGESTS_: false
+    BIOC_USE_DEVEL: "FALSE"
+    GCC_PATH: mingw_64
     R_ARCH: x64
-    USE_RTOOLS: TRUE
-    # WARNINGS_ARE_ERRORS: 1
+    USE_RTOOLS: true
+  matrix:
+    - configuration: 3.5
+      R_VERSION: 3.5.3
+    - configuration: 3.6
+      R_VERSION: 3.6.0
+
+matrix:
+  fast_finish: true
 
 build_script:
-  - Rscript -e "source('http://bioconductor.org/biocLite.R')"
-  - travis-tool.sh install_bioc GenomeInfoDbData
-  - travis-tool.sh install_bioc DelayedArray
-  - travis-tool.sh install_github jotsetung/ensembldb
-  - travis-tool.sh install_bioc EnsDb.Hsapiens.v75
   - travis-tool.sh install_bioc_deps
-  - travis-tool.sh install_deps
 
 test_script:
   - travis-tool.sh run_tests
@@ -41,18 +42,21 @@ on_failure:
 artifacts:
   - path: '*.Rcheck\**\*.log'
     name: Logs
-
   - path: '*.Rcheck\**\*.out'
     name: Logs
-
   - path: '*.Rcheck\**\*.fail'
     name: Logs
-
   - path: '*.Rcheck\**\*.Rout'
     name: Logs
-
   - path: '\*_*.tar.gz'
     name: Bits
-
   - path: '\*_*.zip'
     name: Bits
+  - path: all-Rout.zip
+    name: AllRout
+
+notifications:
+  - provider: Email
+    to:
+      - mike@steinbaugh.com
+    on_build_status_changed: true
