--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,12 +1,10 @@
-^_pkgdown\.yml$
 ^.*\.Rproj$
-^\.httr-oauth$
-^\.lintr$
-^\.Rprofile$
+^[-._a-zA-Z0-9]+\.(R|Rcheck|Rproj|gz|html|pdf|png|sh|tar|txt|xz|yaml|yml|zip)$
+^[._][-._a-zA-Z0-9]+$
 ^\.Rproj\.user$
-^\.travis\.yml$
-^appveyor\.yml$
 ^CONTRIBUTING\.md$
-^docs$
-^pkgdown$
 ^data-raw$
+^doc(s)?$
+^Meta$
+^pkgdown$
+^vignettes/\.$
