Improve sample data import assert checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,10 +63,13 @@ importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
 importFrom(goalie,containsAURL)
+importFrom(goalie,false)
+importFrom(goalie,hasLength)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isADirectory)
 importFrom(goalie,isAFile)
+importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isInRange)
