--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,15 +39,26 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.5)
 Imports:
-    basejump (>= 0.10.7), goalie (>= 0.2.15),
-    Biostrings, S4Vectors,
-    dplyr (>= 0.8), magrittr (>= 1.5), plyr (>= 1.8), rdrop2 (>= 0.8),
-        readr (>= 1.3), rlang (>= 0.3), stringr (>= 1.4), tibble (>= 2.1),
-        tidyr (>= 0.8),
-    methods, utils
+    basejump (>= 0.10.7),
+    goalie (>= 0.2.15),
+    Biostrings,
+    S4Vectors,
+    dplyr (>= 0.8),
+    magrittr (>= 1.5),
+    plyr (>= 1.8),
+    rdrop2 (>= 0.8),
+    readr (>= 1.3),
+    rlang (>= 0.3),
+    stringr (>= 1.4),
+    tibble (>= 2.1),
+    tidyr (>= 0.8),
+    methods,
+    utils
 Suggests:
-    roxygen2, testthat
+    roxygen2,
+    testthat
 Remotes:
+    acidgenomics/acidplots,
     acidgenomics/basejump,
     acidgenomics/goalie
 biocViews:
