--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(readYAMLSampleData)
 export(readYAMLSampleMetrics)
 export(runDate)
 export(sampleDirs)
+export(separatorBar)
+export(updateMessage)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
@@ -47,6 +49,8 @@ importFrom(basejump,printString)
 importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
+importFrom(basejump,separatorBar)
+importFrom(basejump,updateMessage)
 importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
