--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bcbioBase
-Title: bcbio base functions
+Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.6.4
 Date: 2019-05-13
