--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.6.4
-Date: 2019-05-29
+Version: 0.6.5
+Date: 2019-07-17
 Authors@R: c(
     person(
         given = "Michael",
@@ -39,8 +39,8 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.5)
 Imports:
-    basejump (>= 0.10.9),
-    goalie (>= 0.2.16),
+    basejump (>= 0.10.11),
+    goalie (>= 0.2.17),
     Biostrings,
     S4Vectors,
     dplyr (>= 0.8),
@@ -48,16 +48,16 @@ Imports:
     plyr (>= 1.8),
     rdrop2 (>= 0.8),
     readr (>= 1.3),
-    rlang (>= 0.3),
+    rlang (>= 0.4),
     stringr (>= 1.4),
     tibble (>= 2.1),
     tidyr (>= 0.8),
     methods,
     utils
 Suggests:
-    acidplots,
-    roxygen2,
-    testthat
+    acidplots (>= 0.2.5),
+    roxygen2 (>= 6.1),
+    testthat (>= 2.1)
 Remotes:
     acidgenomics/acidplots,
     acidgenomics/basejump,
