Migrate readSampleData and readTx2Gene to basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ importFrom(basejump,metadataBlacklist)
 importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
+importFrom(basejump,readSampleData)
+importFrom(basejump,readTx2Gene)
 importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
