Simplify the package NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,13 +30,11 @@ export(runDate)
 export(sampleDirs)
 export(separatorBar)
 export(updateMessage)
-importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,tail)
-importFrom(basejump,Tx2Gene)
-importFrom(basejump,camel)
+importFrom(basejump,camelCase)
 importFrom(basejump,import)
 importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
@@ -54,15 +52,9 @@ importFrom(basejump,sanitizeNA)
 importFrom(basejump,separatorBar)
 importFrom(basejump,updateMessage)
 importFrom(dplyr,arrange)
-importFrom(dplyr,everything)
-importFrom(dplyr,group_by)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
-importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
-importFrom(dplyr,select)
-importFrom(dplyr,ungroup)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
