--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,8 +53,10 @@ importFrom(basejump,separatorBar)
 importFrom(basejump,updateMessage)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
+importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,assert)
+importFrom(goalie,hasLength)
 importFrom(goalie,hasRownames)
 importFrom(goalie,isADirectory)
 importFrom(goalie,isAFile)
@@ -79,6 +81,7 @@ importFrom(rdrop2,drop_exists)
 importFrom(rdrop2,drop_get_metadata)
 importFrom(rdrop2,drop_share)
 importFrom(rdrop2,drop_upload)
+importFrom(stringr,str_match)
 importFrom(utils,globalVariables)
 importMethodsFrom(S4Vectors,coerce)
 importMethodsFrom(basejump,coerce)
