--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(getSampleDataFromYAML)
 export(getUMITypeFromCommands)
 export(importDataVersions)
 export(importProgramVersions)
+export(importSampleData)
+export(importTx2Gene)
 export(metadataBlacklist)
 export(projectDir)
 export(projectDirPattern)
@@ -25,6 +27,8 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,tail)
 importFrom(basejump,camelCase)
 importFrom(basejump,import)
+importFrom(basejump,importSampleData)
+importFrom(basejump,importTx2Gene)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,makeSampleData)
