Update Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ install:
 jobs:
   include:
     - stage: test
-      name: "bioc-3.9"
-      script: image="r-bcbio" tag="bioc-3.9" ./.Rcheck/docker
+      name: "bioc-release"
+      script: image="bcbiornaseq" tag="bioc-release" ./.Rcheck/docker
     - stage: test
       name: "bioc-devel"
-      script: image="r-bcbio" tag="bioc-devel" ./.Rcheck/docker
+      script: image="bcbiornaseq" tag="bioc-devel" ./.Rcheck/docker
 
 matrix:
   allow_failures:
