--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,11 @@ importFrom(basejump,readTx2Gene)
 importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_dl)
+importFrom(cli,cli_text)
+importFrom(cli,cli_ul)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
