--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ importFrom(basejump,sanitizeNA)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_dl)
+importFrom(cli,cli_end)
+importFrom(cli,cli_par)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(goalie,allAreAtomic)
