--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,10 +40,10 @@ importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
 importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_div)
 importFrom(cli,cli_dl)
-importFrom(cli,cli_end)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(goalie,allAreAtomic)
