--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ URL:
     https://bioinformatics.sph.harvard.edu/bcbioBase/,
     https://github.com/hbc/bcbioBase/
 BugReports: https://github.com/hbc/bcbioBase/issues/
-License: MIT + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: TRUE
 Depends: R (>= 3.6)
