--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.6.13
-Date: 2020-02-19
+Version: 0.6.14
+Date: 2020-07-24
 Authors@R: c(
     person(
         given = "Michael",
@@ -37,20 +37,20 @@ BugReports: https://github.com/hbc/bcbioBase/issues/
 License: GPL-3
 Encoding: UTF-8
 LazyData: TRUE
-Depends: R (>= 3.6)
+Depends: R (>= 4.0)
 Imports:
-    S4Vectors (>= 0.24),
-    basejump (>= 0.12.0),
+    S4Vectors,
+    basejump (>= 0.12.9),
     cli (>= 2.0),
-    goalie (>= 0.4.1),
-    plyr (>= 1.8),
-    stringr (>= 1.4),
+    goalie (>= 0.4.6),
     methods,
+    plyr (>= 1.8.6),
+    stringr (>= 1.4),
     utils
 Suggests:
-    rdrop2 (>= 0.8),
-    roxygen2 (>= 7.0),
-    testthat (>= 2.3)
+    rdrop2 (>= 0.8.1),
+    roxygen2,
+    testthat
 Remotes:
     acidgenomics/basejump,
     acidgenomics/goalie
@@ -58,4 +58,4 @@ biocViews:
     DataImport,
     Infrastructure
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
