--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,7 +6,7 @@ authors:
   Lorena Pantano:
     href: https://lpantano.github.io/
   Harvard Chan Bioinformatics Core:
-    href: http://bioinformatics.sph.harvard.edu/
+    href: https://bioinformatics.sph.harvard.edu/
 
 news:
   - one_page: false
