--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,3 +56,4 @@ biocViews:
     Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Additional_repositories: https://r.acidgenomics.com
