--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.6.15
-Date: 2020-10-08
+Version: 0.6.16
+Date: 2020-12-03
 Authors@R: c(
     person(
         given = "Michael",
@@ -40,15 +40,15 @@ LazyData: TRUE
 Depends: R (>= 4.0)
 Imports:
     S4Vectors,
-    basejump (>= 0.13.1),
-    cli (>= 2.0),
-    goalie (>= 0.4.9),
+    basejump (>= 0.13.3),
+    cli (>= 2.2),
+    goalie (>= 0.4.11),
     methods,
     plyr (>= 1.8),
     stringr (>= 1.4),
     utils
 Suggests:
-    rdrop2 (>= 0.8),
+    rdrop2,
     roxygen2,
     testthat
 biocViews:
