--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
 importFrom(basejump,tail)
 importFrom(basejump,ul)
+importFrom(basejump,unlistToDataFrame)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
