Switch from deprecated `unlistToDataFrame` to hardened `rbindToDataFrame`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,12 +38,12 @@ importFrom(basejump,new)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
 importFrom(basejump,printString)
+importFrom(basejump,rbindToDataFrame)
 importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
 importFrom(basejump,tail)
 importFrom(basejump,ul)
-importFrom(basejump,unlistToDataFrame)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
