Update pkgdown URL

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,4 +9,4 @@ authors:
     href: https://bioinformatics.sph.harvard.edu/
 news:
   - one_page: false
-url: https://bioinformatics.sph.harvard.edu/bcbioBase
+url: https://r.acidgenomics.com/packages/bcbiobase
