--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(basejump,rbindToDataFrame)
 importFrom(basejump,realpath)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
+importFrom(basejump,str_match)
 importFrom(basejump,tail)
 importFrom(basejump,ul)
 importFrom(goalie,allAreAtomic)
@@ -55,5 +56,4 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validNames)
-importFrom(stringr,str_match)
 importMethodsFrom(basejump,coerce)
