Improve CLI messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(runDate)
 export(sampleDirs)
 importFrom(basejump,"metadata<-")
 importFrom(basejump,DataFrame)
+importFrom(basejump,abort)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
 importFrom(basejump,alertWarning)
