Improve CLI messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeNA)
 importFrom(basejump,str_match)
 importFrom(basejump,tail)
+importFrom(basejump,toInlineString)
 importFrom(basejump,ul)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
