--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,16 +20,13 @@ importFrom(basejump,abort)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
 importFrom(basejump,alertWarning)
-importFrom(basejump,as)
 importFrom(basejump,camelCase)
 importFrom(basejump,dl)
 importFrom(basejump,import)
-importFrom(basejump,is)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,makeSampleData)
 importFrom(basejump,na.omit)
-importFrom(basejump,new)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
 importFrom(basejump,printString)
@@ -58,4 +55,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validNames)
+importFrom(methods,as)
+importFrom(methods,is)
+importFrom(methods,new)
 importMethodsFrom(basejump,coerce)
