--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.6.23.9000
-Date: 2021-12-06
+Date: 2022-03-07
 Authors@R: c(
     person(
         given = "Michael",
@@ -40,15 +40,14 @@ URL:
 BugReports: https://github.com/acidgenomics/r-bcbiobase/issues/
 License: AGPL-3
 Encoding: UTF-8
-LazyData: TRUE
 Depends: R (>= 4.1)
 Imports:
-    basejump (>= 0.15.0.9000),
-    goalie (>= 0.6.0.9000),
+    basejump (>= 0.15.0),
+    goalie (>= 0.6.0),
     methods
 Suggests:
-    rdrop2 (>= 0.8.2),
-    testthat (>= 3.1.0)
+    rdrop2,
+    testthat
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Additional_repositories: https://r.acidgenomics.com
