--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,29 +13,21 @@ export(projectDir)
 export(projectDirPattern)
 export(runDate)
 export(sampleDirs)
-importFrom(basejump,"metadata<-")
-importFrom(basejump,DataFrame)
-importFrom(basejump,abort)
-importFrom(basejump,alert)
-importFrom(basejump,alertInfo)
-importFrom(basejump,alertWarning)
-importFrom(basejump,camelCase)
-importFrom(basejump,dl)
-importFrom(basejump,import)
-importFrom(basejump,makeNames)
-importFrom(basejump,makeSampleData)
-importFrom(basejump,na.omit)
-importFrom(basejump,packageName)
-importFrom(basejump,packageVersion)
-importFrom(basejump,printString)
-importFrom(basejump,rbindToDataFrame)
-importFrom(basejump,realpath)
-importFrom(basejump,removeNA)
-importFrom(basejump,sanitizeNA)
-importFrom(basejump,str_match)
-importFrom(basejump,tail)
-importFrom(basejump,toInlineString)
-importFrom(basejump,ul)
+importFrom(AcidBase,printString)
+importFrom(AcidBase,realpath)
+importFrom(AcidCLI,abort)
+importFrom(AcidCLI,alert)
+importFrom(AcidCLI,alertInfo)
+importFrom(AcidCLI,alertWarning)
+importFrom(AcidCLI,dl)
+importFrom(AcidCLI,toInlineString)
+importFrom(AcidCLI,ul)
+importFrom(AcidExperiment,makeSampleData)
+importFrom(AcidPlyr,rbindToDataFrame)
+importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,tail)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
@@ -54,6 +46,22 @@ importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validNames)
 importFrom(methods,as)
+importFrom(methods,coerce)
 importFrom(methods,is)
 importFrom(methods,new)
-importMethodsFrom(basejump,coerce)
+importFrom(pipette,import)
+importFrom(pipette,removeNA)
+importFrom(pipette,sanitizeNA)
+importFrom(stringr,str_match)
+importFrom(syntactic,camelCase)
+importFrom(syntactic,makeNames)
+importFrom(utils,packageName)
+importFrom(utils,packageVersion)
+importMethodsFrom(AcidExperiment,makeSampleData)
+importMethodsFrom(AcidPlyr,rbindToDataFrame)
+importMethodsFrom(pipette,coerce)
+importMethodsFrom(pipette,import)
+importMethodsFrom(pipette,removeNA)
+importMethodsFrom(pipette,sanitizeNA)
+importMethodsFrom(syntactic,camelCase)
+importMethodsFrom(syntactic,makeNames)
