--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getLevelFromCommands)
 export(getMetricsFromYAML)
 export(getSampleDataFromYAML)
 export(getUMITypeFromCommands)
+export(import)
 export(importDataVersions)
 export(importProgramVersions)
 export(projectDir)
