--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.7.1.9000
-Date: 2022-04-05
+Date: 2022-04-27
 Authors@R: c(
     person(
         given = "Michael",
@@ -40,18 +40,18 @@ URL:
 BugReports: https://github.com/hbc/bcbioBase/issues/
 License: AGPL-3
 Encoding: UTF-8
-Depends: R (>= 4.1)
+Depends: R (>= 4.2)
 Imports:
-    AcidBase (>= 0.5.0),
-    AcidCLI (>= 0.2.0),
-    AcidExperiment (>= 0.3.0),
-    AcidPlyr (>= 0.2.0),
+    AcidBase,
+    AcidCLI,
+    AcidExperiment,
+    AcidPlyr,
     S4Vectors,
-    goalie (>= 0.6.0),
+    goalie,
     methods,
-    pipette (>= 0.8.0),
+    pipette,
     stringr,
-    syntactic (>= 0.5.1),
+    syntactic,
     utils
 Suggests:
     testthat
