--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.8.0
-Date: 2022-05-06
+Version: 0.8.1
+Date: 2022-05-24
 Authors@R: c(
     person(
         given = "Michael",
@@ -54,7 +54,8 @@ Imports:
     syntactic,
     utils
 Suggests:
-    testthat
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+    testthat (>= 3.0.0)
 Additional_repositories: https://r.acidgenomics.com
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
