--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.8.1
-Date: 2022-05-24
+Version: 0.8.2.9000
+Date: 2023-08-11
 Authors@R: c(
     person(
         given = "Michael",
@@ -40,7 +40,7 @@ URL:
 BugReports: https://github.com/hbc/bcbioBase/issues/
 License: AGPL-3
 Encoding: UTF-8
-Depends: R (>= 4.2)
+Depends: R (>= 4.3)
 Imports:
     AcidBase,
     AcidCLI,
@@ -54,8 +54,9 @@ Imports:
     syntactic,
     utils
 Suggests:
-    testthat (>= 3.0.0)
+    testthat
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
+Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
