--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions for bcbio R packages.
-Version: 0.8.2
-Date: 2023-08-15
+Version: 0.8.3.9000
+Date: 2023-09-20
 Authors@R: c(
     person(
         given = "Michael",
@@ -42,19 +42,19 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.3)
 Imports:
-    AcidBase,
-    AcidCLI,
-    AcidExperiment,
-    AcidPlyr,
-    S4Vectors,
-    goalie,
+    AcidBase (>= 0.6.23),
+    AcidCLI (>= 0.2.8),
+    AcidExperiment (>= 0.4.8),
+    AcidPlyr (>= 0.4.2),
+    S4Vectors (>= 0.38.0),
+    goalie (>= 0.6.18),
+    pipette (>= 0.14.0),
+    stringr (>= 1.5.0),
+    syntactic (>= 0.6.6),
     methods,
-    pipette,
-    stringr,
-    syntactic,
     utils
 Suggests:
-    testthat
+    testthat (>= 3.1.10)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
 Config/testthat/parallel: true
