--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bcbioBase
-Title: bcbio Base Functions
+Title: Bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.8.3.9000
 Date: 2023-09-20
