Work toward removing stringr dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(runDate)
 export(sampleDirs)
 importFrom(AcidBase,printString)
 importFrom(AcidBase,realpath)
+importFrom(AcidBase,strMatch)
 importFrom(AcidCLI,abort)
 importFrom(AcidCLI,alert)
 importFrom(AcidCLI,alertInfo)
@@ -52,7 +53,6 @@ importFrom(methods,new)
 importFrom(pipette,import)
 importFrom(pipette,removeNA)
 importFrom(pipette,sanitizeNA)
-importFrom(stringr,str_match)
 importFrom(syntactic,camelCase)
 importFrom(syntactic,makeNames)
 importFrom(utils,packageName)
