--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bcbioBase
 Title: Bcbio Base Functions
 Description: Base functions for bcbio R packages.
 Version: 0.8.3.9000
-Date: 2023-09-20
+Date: 2023-09-21
 Authors@R: c(
     person(
         given = "Michael",
@@ -42,15 +42,14 @@ License: AGPL-3
 Encoding: UTF-8
 Depends: R (>= 4.3)
 Imports:
-    AcidBase (>= 0.6.23),
+    AcidBase (>= 0.6.24),
     AcidCLI (>= 0.2.8),
     AcidExperiment (>= 0.4.8),
     AcidPlyr (>= 0.4.2),
     S4Vectors (>= 0.38.0),
-    goalie (>= 0.6.18),
+    goalie (>= 0.6.19),
     pipette (>= 0.14.0),
-    stringr (>= 1.5.0),
-    syntactic (>= 0.6.6),
+    syntactic (>= 0.6.7),
     methods,
     utils
 Suggests:
@@ -60,3 +59,4 @@ Config/testthat/edition: 3
 Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+biocViews: Infrastructure
