--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Imports:
     methods,
     utils
 Suggests:
+    AcidDevTools (>= 0.7.0),
     testthat (>= 3.1.10)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
